--- a/Interfaces/cs.lproj/AppearancePreferencesView.strings
+++ b/Interfaces/cs.lproj/AppearancePreferencesView.strings
@@ -1,27 +1,20 @@
-
-/* Class = "NSTextFieldCell"; title = "Při zobrazování příspěvků nebo webových stránek:"; ObjectID = "71S-pg-AjX"; */
+/* Class = "NSTextFieldCell"; title = "When viewing articles or web pages:"; ObjectID = "71S-pg-AjX"; */
 "71S-pg-AjX.title" = "Při zobrazování příspěvků nebo webových stránek:";
 
-/* Class = "NSTextFieldCell"; title = "Písmo seznamu složek:"; ObjectID = "B5v-p5-vrf"; */
+/* Class = "NSTextFieldCell"; title = "Folder list font:"; ObjectID = "B5v-p5-vrf"; */
 "B5v-p5-vrf.title" = "Písmo seznamu složek:";
 
-/* Class = "NSButtonCell"; title = "Vybrat…"; ObjectID = "BDw-v3-mpF"; */
+/* Class = "NSButtonCell"; title = "Select…"; ObjectID = "BDw-v3-mpF"; */
 "BDw-v3-mpF.title" = "Vybrat…";
 
-/* Class = "NSButtonCell"; title = "Zobrazovat v seznamu složek přizpůsobené ikonky"; ObjectID = "MEV-HA-bdL"; */
+/* Class = "NSButtonCell"; title = "Show feeds icons in folder list"; ObjectID = "MEV-HA-bdL"; */
 "MEV-HA-bdL.title" = "Zobrazovat v seznamu složek přizpůsobené ikonky";
 
-/* Class = "NSTextFieldCell"; title = "Písmo seznamu příspěvků:"; ObjectID = "auD-UC-Pij"; */
+/* Class = "NSTextFieldCell"; title = "Article list font:"; ObjectID = "auD-UC-Pij"; */
 "auD-UC-Pij.title" = "Písmo seznamu příspěvků:";
 
-/* Class = "NSTextFieldCell"; title = "(ukázka)"; ObjectID = "azr-ft-M4J"; */
-"azr-ft-M4J.title" = "(ukázka)";
-
-/* Class = "NSTextFieldCell"; title = "(ukázka)"; ObjectID = "g63-xD-ICn"; */
-"g63-xD-ICn.title" = "(ukázka)";
-
-/* Class = "NSButtonCell"; title = "Vybrat…"; ObjectID = "gGT-YP-aum"; */
+/* Class = "NSButtonCell"; title = "Select…"; ObjectID = "gGT-YP-aum"; */
 "gGT-YP-aum.title" = "Vybrat…";
 
-/* Class = "NSButtonCell"; title = "Nepoužívat menší velikost písem než:"; ObjectID = "zfJ-Ge-Cxe"; */
+/* Class = "NSButtonCell"; title = "Never use font sizes smaller than"; ObjectID = "zfJ-Ge-Cxe"; */
 "zfJ-Ge-Cxe.title" = "Nepoužívat menší velikost písem než:";
