--- a/Interfaces/cs.lproj/AdvancedPreferencesView.strings
+++ b/Interfaces/cs.lproj/AdvancedPreferencesView.strings
@@ -1,42 +1,38 @@
-
-/* Class = "NSTextFieldCell"; title = "Čím vyšší číslo, tím rychleji se Vám budou načítat Vaše odebírání."; ObjectID = "2GQ-cu-fbh"; */
+/* Class = "NSTextFieldCell"; title = "The higher the number, the quicker your subscriptions will be downloaded."; ObjectID = "2GQ-cu-fbh"; */
 "2GQ-cu-fbh.title" = "Čím vyšší číslo, tím rychleji se Vám budou načítat Vaše odebírání.";
 
-/* Class = "NSTextFieldCell"; title = "Tato nastavení není třeba při běžném používání programu Vienna měnit. Podrobnosti k jednotlivým volbám naleznete v nápovědě.\n"; ObjectID = "GaX-8c-QaN"; */
-"GaX-8c-QaN.title" = "Tato nastavení není třeba při běžném používání programu Vienna měnit. Podrobnosti k jednotlivým volbám naleznete v nápovědě.\n";
+/* Class = "NSTextFieldCell"; title = "The settings here should not need to be changed for the normal use of Vienna. Refer to the Help file for details of each setting."; ObjectID = "GaX-8c-QaN"; */
+"GaX-8c-QaN.title" = "Tato nastavení není třeba při běžném používání programu Vienna měnit. Podrobnosti k jednotlivým volbám naleznete v nápovědě.";
 
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "Gua-yV-73n"; */
-"Gua-yV-73n.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "30"; ObjectID = "Mlu-22-guR"; */
+/* Class = "NSMenuItem"; title = "30"; ObjectID = "Mlu-22-guR"; Note = "Do not localize"; */
 "Mlu-22-guR.title" = "30";
 
-/* Class = "NSTextFieldCell"; title = "Souběžná stahování:"; ObjectID = "Ngw-hP-yW4"; */
+/* Class = "NSTextFieldCell"; title = "Concurrent downloads:"; ObjectID = "Ngw-hP-yW4"; */
 "Ngw-hP-yW4.title" = "Souběžná stahování:";
 
-/* Class = "NSTextFieldCell"; title = "Nicméně vyšší čísla zároveň způsobí horší odezvu počítače během aktualizování odebírání."; ObjectID = "S3T-cW-hys"; */
+/* Class = "NSTextFieldCell"; title = "However, high numbers also render your computer less responsive while refreshing feeds."; ObjectID = "S3T-cW-hys"; */
 "S3T-cW-hys.title" = "Nicméně vyšší čísla zároveň způsobí horší odezvu počítače během aktualizování odebírání.";
 
-/* Class = "NSMenuItem"; title = "2"; ObjectID = "bKP-m5-YPx"; */
+/* Class = "NSMenuItem"; title = "2"; ObjectID = "bKP-m5-YPx"; Note = "Do not localize"; */
 "bKP-m5-YPx.title" = "2";
 
-/* Class = "NSMenuItem"; title = "15"; ObjectID = "dXW-1P-Mja"; */
+/* Class = "NSMenuItem"; title = "15"; ObjectID = "dXW-1P-Mja"; Note = "Do not localize"; */
 "dXW-1P-Mja.title" = "15";
 
 /* Class = "NSButtonCell"; title = "Enable Plugins in the internal browser"; ObjectID = "fIz-4t-Ogg"; */
 "fIz-4t-Ogg.title" = "Enable Plugins in the internal browser";
 
-/* Class = "NSButtonCell"; title = "Aktivovat JavaScript v interním prohlížeči"; ObjectID = "guK-dE-f6n"; */
+/* Class = "NSButtonCell"; title = "Enable JavaScript in the internal browser"; ObjectID = "guK-dE-f6n"; */
 "guK-dE-f6n.title" = "Aktivovat JavaScript v interním prohlížeči";
 
-/* Class = "NSMenuItem"; title = "1"; ObjectID = "koF-ku-VbZ"; */
+/* Class = "NSMenuItem"; title = "1"; ObjectID = "koF-ku-VbZ"; Note = "Do not localize"; */
 "koF-ku-VbZ.title" = "1";
 
-/* Class = "NSMenuItem"; title = "10"; ObjectID = "p15-eO-dBa"; */
+/* Class = "NSMenuItem"; title = "10"; ObjectID = "p15-eO-dBa"; Note = "Do not localize"; */
 "p15-eO-dBa.title" = "10";
 
-/* Class = "NSMenuItem"; title = "50"; ObjectID = "q0t-6p-Xd6"; */
+/* Class = "NSMenuItem"; title = "50"; ObjectID = "q0t-6p-Xd6"; Note = "Do not localize"; */
 "q0t-6p-Xd6.title" = "50";
 
-/* Class = "NSMenuItem"; title = "5"; ObjectID = "yD7-hF-SbK"; */
+/* Class = "NSMenuItem"; title = "5"; ObjectID = "yD7-hF-SbK"; Note = "Do not localize"; */
 "yD7-hF-SbK.title" = "5";
